fix table on mobile

--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -53,3 +53,9 @@ footer {
   border-top: 1px solid #e0e0e0;
   padding-top: 35px;
 }
+
+@media screen and (max-width: 640px) {
+  .mui-table.mui-table--bordered>tbody>tr>td {
+      word-break: break-word;
+  }
+}
